Chat limit fix part 2

--- a/plugCubed.css
+++ b/plugCubed.css
@@ -413,7 +413,8 @@
     height: 540px;
 }
 
-#dialog-custom-colors input[type="text"],#dialog-chat-limit input[type="text"] {
+#dialog-custom-colors input[type="text"],
+#dialog-chat-limit input[type="text"] {
     width: 60px;
 }
 
@@ -472,6 +473,7 @@
     width: 60px;
     left: 150px;
 }
+
 #dialog-chat-limit {
     width: 200px;
     height: 150px;
@@ -481,22 +483,7 @@
     height: 125px;
 }
 
-#dialog-chat-limit .dialog-cancel-button {
-    width: 85px;
-    right: 98px;
-}
-
 #dialog-chat-limit .dialog-submit-button {
     width: 85px;
     right: 5px;
-}
-
-#dialog-chat-limit .dialog-checkbox-container-enabled {
-    left: 10px;
-    top: 5px;
-}
-
-#dialog-chat-limit .dialog-input-background {
-    width: 40px;
-    left: 138px;
 }
