Fix line in userlist

--- a/plugCubed.css
+++ b/plugCubed.css
@@ -267,7 +267,7 @@
     border: none;
     border-top: 1px solid #AAA;
     padding: 0;
-    margin: 10px 0;
+    margin: 10px 30px 10px 0;
 }
 
 #side-left .sidebar-handle {
