--- a/plugCubed.css
+++ b/plugCubed.css
@@ -167,7 +167,7 @@
 .icon-plug-cubed {
     left:15px;
     top:11px;
-    background-image:url('http://files.plugcubed.net/images/menu_logo.png');
+    background-image:url('http://alpha.plugcubed.net/images/menu_logo.png');
 }
 
 #user-lists .list.room .user .icon-meh {
@@ -179,7 +179,7 @@
 #volume .icon-volume-off-once {
     background-repeat: no-repeat;
     background-position: 9px 6px;
-    background-image:url('http://files.plugcubed.net/images/mute_once.png');
+    background-image:url('http://alpha.plugcubed.net/images/mute_once.png');
 }
 
 #p3-settings,
@@ -312,7 +312,7 @@
     left:auto;
     width:20px;
     height:20px;
-    background-image:url('http://files.plugcubed.net/images/default_settings.png');
+    background-image:url('http://alpha.plugcubed.net/images/default_settings.png');
     cursor:pointer;
 }
 
@@ -451,7 +451,7 @@
 }
 
 .p3-s-stream {
-    background-image:url('http://files.plugcubed.net/images/stream_on_off.png');
+    background-image:url('http://alpha.plugcubed.net/images/stream_on_off.png');
     left:205px;
     top:7px;
 }
@@ -461,7 +461,7 @@
 }
 
 .p3-s-clear {
-    background-image:url('http://files.plugcubed.net/images/clear_chat.png');
+    background-image:url('http://alpha.plugcubed.net/images/clear_chat.png');
     left:254px;
 }
 
