--- a/src/alpha/plugCubed.css
+++ b/src/alpha/plugCubed.css
@@ -245,7 +245,7 @@
     width: 53px;
     height: 54px;
     cursor: pointer;
-    background: #323742;
+    background: #282C35;
     -moz-box-shadow: inset 0 -2px 0 -1px #0a0a0a;
     -webkit-box-shadow: inset 0 -2px 0 -1px #0a0a0a;
     box-shadow: inset 0 -2px 0 -1px #0a0a0a;
